# frameDetect

./: conanfile.py  win_d32_profile.txt  win_d64_profile.txt  win_r32_profile.txt  win_r64_profile.txt
src/: CMakeLists.txt  blackDetect.cc  blackDetect.h  commonType.h  frameDetect.cc  frameDetect.h  greenDetect.cc  greenDetect.h
